# python-project-lvl4

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  runtime.txt  setup.cfg
.github/workflows/: dimaevan-lin&test.yml  dimaevan-lint&test.yml
labels/: admin.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: staticfiles.8dd47034fe10.json  staticfiles.json
statuses/: admin.py  forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: forms.py  mixins.py  models.py  settings.py  urls.py  views.py
task_manager/locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/migrations/: 0001_initial.py
task_manager/templates/: base.html  delete_user.html  footer.html  login.html  main_page.html  messages.html  nav.html  registration.html  user.html  users.html
tasks/: admin.py  filter.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_rename_workers_task_executor.py  0003_alter_task_executor.py
templates/: base.html  footer.html  login.html  main_page.html  messages.html  nav.html  user.html  users.html
templates/labels/: label_add.html  label_delete.html  label_update.html  labels_list.html
templates/statuses/: status_delete.html  statuses_add.html  statuses_list.html  statuses_update.html
templates/tasks/: task_add.html  task_delete.html  task_filter.html  task_update.html  task_view.html  tasks_list.html
templates/users/: delete_user.html  login.html  registration.html  user.html  users.html
tests/: Client_tests.py  User_tests.py  test_Login.py  test_edit_user.py  test_labels.py  test_login.py  test_statuses.py  test_tasks.py  test_users.py  test_views.py
