[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dima Evan <dimaevan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.9"
flake8 = "^4.0.1"
python-dotenv = "^0.19.2"
gunicorn = "^20.1.0"
django-bootstrap-v5 = "^1.0.7"
django-extensions = "^3.1.5"
pytest-django = "^4.5.2"
django-filter = "^21.1"
pytest-cov = "^3.0.0"
whitenoise = "^5.3.0"
dj-database-url = "^0.5.0"
psycopg2 = "^2.9.3"
rollbar = "^0.16.2"

[tool.poetry.dev-dependencies]
Faker = "^11.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
